# badger

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  NORMALIZED_COMPARISON.md  README.md  TESTING_REPORT.md  docker-compose.yml  prometheus.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260215_070659_add_check_in_column.rs  m20260216_064755_add_unique_id_column.rs  m20260220_022947_add_cron_column_to_jobs.rs
src/: main.rs
src/entity/: job.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
testing/: BENCHMARK_REPORT.md
testing/oban_benchmark/: .gitignore  README.md  load_test.sh  mix.exs
testing/oban_benchmark/lib/: oban_benchmark.ex
testing/oban_benchmark/lib/oban_benchmark/: application.ex  benchmark_helpers.ex  repo.ex  worker.ex
testing/oban_benchmark/test/: oban_benchmark_test.exs  test_helper.exs
testing/oban_benchmark/test/oban_benchmark/: benchmarks_test.exs  high_load_benchmarks_test.exs  normalized_benchmarks_test.exs
tests/: api_test.rs  benchmark.rs  integration_test.rs  load_test.sh  normalized_benchmark.rs  pg_benchmark.rs
