[package]
name = "badger"
version = "0.1.25"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
