[package]
name = "badger"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = "1.20.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
anyhow = "1.0.101"
rand = "0.10.0"
