[package]
name = "badger"
version = "0.5.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = "1.20.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
anyhow = "1.0.101"
rand = "0.10.0"
sha2 = "0.10.9"
hex = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
governor = "0.10.4"
nonzero_ext = "0.3.0"
url = "2.5.8"
