[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "1.1.19"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
